[project]
name = "langchain-arag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastembed>=0.8.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.2.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
]
